Mostly working tx verification
